--- a/shoppingcar.html
+++ b/shoppingcar.html
@@ -30,6 +30,41 @@
          }(document, 'script', 'facebook-jssdk'));
       </script>
 
+<script>
+    paypal.Button.render({
+
+        env: 'sandbox', // Or 'sandbox'
+
+        client: {
+            sandbox:    'ATH_tXAxah8oY4KxwPPA8pikjZFdx-ALcKZtoB92vaby_P54yHiXaPK4zdLttfyQG_ftGiVim8Xoc0JZ',
+            production: ''
+        },
+
+        commit: true, // Show a 'Pay Now' button
+
+        payment: function(data, actions) {
+            return actions.payment.create({
+                payment: {
+                    transactions: [
+                        {
+                            amount: { total: '9500.00', currency: 'USD' }
+                        }
+                    ]
+                }
+            });
+        },
+
+        onAuthorize: function(data, actions) {
+            return actions.payment.execute().then(function(payment) {
+
+                // The payment is complete!
+                // You can now show a confirmation message to the customer
+            });
+        }
+
+    }, '#paypal-button');
+</script>
+
 </head>
 <body onload="initialize()">
 
@@ -186,41 +221,6 @@
     </div>
 </body>
 </html>
-
-<script>
-    paypal.Button.render({
-
-        env: 'production', // Or 'sandbox'
-
-        client: {
-            sandbox:    'AZDxjDScFpQtjWTOUtWKbyN_bDt4OgqaF4eYXlewfBP4-8aqX3PiV8e1GWU6liB2CUXlkA59kJXE7M6R',
-            production: 'xxxxxxxxx'
-        },
-
-        commit: true, // Show a 'Pay Now' button
-
-        payment: function(data, actions) {
-            return actions.payment.create({
-                payment: {
-                    transactions: [
-                        {
-                            amount: { total: '1.00', currency: 'USD' }
-                        }
-                    ]
-                }
-            });
-        },
-
-        onAuthorize: function(data, actions) {
-            return actions.payment.execute().then(function(payment) {
-
-                // The payment is complete!
-                // You can now show a confirmation message to the customer
-            });
-        }
-
-    }, '#paypal-button');
-</script>
 
 <script>
 
